使用dll 自動引入可以免更新code就增加模塊(推薦)

--- a/WpfForPrism/WpfForPrism.csproj
+++ b/WpfForPrism/WpfForPrism.csproj
@@ -13,8 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ModuleA\ModuleA.csproj" />
-    <ProjectReference Include="..\ModuleB\ModuleB.csproj" />
+    <None Update="Modules\ModuleA.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Modules\ModuleB.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
